--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
+    "axios": "^1.8.4",
     "lucide-react": "^0.483.0",
     "pdf-lib": "^1.17.1",
     "react": "^19.0.0",
