--- a/backend/src/.env
+++ b/backend/src/.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT=5000
-MONGODB_URI="mongodb+srv://boot:boot@cluster0.kcv7y.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGODB_URI=mongodb+srv://boot:boot@cluster0.kcv7y.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_jwt_secret
